<resources>
    <string name="app_name">Cat Clicker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_acct">Create Account</string>
    <string name="login">Log In</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="credits">Credits</string>
    <string name="options">Options</string>
    <string name="shop">Shop</string>
    <string name="pointDefault">Points: 0</string>
    <string name="healthDefault">Health: 100</string>
    <string name="statistics">Statistics:</string>
    <string name="audioSettings">Audio Settings:</string>
    <string name="accountSettings">Account Settings:</string>
    <string name="resetPassword">Reset Password</string>
    <string name="save">Save Game</string>
</resources>